--- a/src/components/components.css
+++ b/src/components/components.css
@@ -79,7 +79,7 @@ margin: 60px auto;
   .post-container{
       
     height: 100%;
-    width:600px;
+    width:100%;
     margin: 30px auto;
     background-color:whitesmoke;
   }
@@ -94,7 +94,7 @@ margin: 60px auto;
       flex-direction: column;
       border:1px solid #472285;
       width: 600px;
-      margin:30px auto;
+      margin:10px auto;
       
   }
   .timeline-container{
@@ -112,15 +112,15 @@ margin: 60px auto;
   }
   .line-input{
       
-      height: 80px;
+      height: 50px;
       width: 400px;
-      margin:30px auto;
+      margin:10px auto;
       display:flex;
         text-align: center;
   }
   .date-input{
     width:150px;
-    margin:30px auto;
+    margin:10px auto;
     text-align: center;
     
   }
@@ -137,17 +137,29 @@ margin: 60px auto;
       flex-wrap: nowrap;
       text-align: end;
       align-items: flex-start;
-      width: 600px;
+      width: 500px;
       font-size:10px;
+      margin:0 auto;
       
      
       
   }
 
   .posts{
-      margin:30px 0;
+      margin:30px auto;
       border: 1px solid black;
       background-color: white;
+      width:700px;
+      
      
+  }
+
+  .date{
+      text-align: center;
+  }
+
+  .description{
+      color:black;
+      text-align: center;
   }
   
