--- a/src/components/components.css
+++ b/src/components/components.css
@@ -83,16 +83,17 @@ font-family:'source sans pro';
   }
 
   .timeline-title{
-      font-size: 50px;
+      font-size: 120px;
       color:whitesmoke;
       font-family:'source sans pro';
   }
   .header-container{
       display:flex;
       justify-content: space-around;
-      align-items: center;
+      align-items: flex-start;
       background-color:#472285;
       font-family:'source sans pro';
+      height: 300px;
   }
   .header-text{
       color:whitesmoke;
@@ -102,6 +103,8 @@ font-family:'source sans pro';
     color:#FD5D67;
     font-weight:bold;
     cursor:pointer;
+    font-size: 20px;
+    
   }
   .header-text:last-child:hover{
       color:white;
@@ -111,27 +114,28 @@ font-family:'source sans pro';
   .post{
       color:black;
       text-align: left;
-      height:50px;
+      height:80px;
       border-radius:10px;
       padding:10px;
-      background-color:white;
+      background-color:whitesmoke;
       font-size:18px;
       margin:5px 0;
   }
   .post-container{
-    background-color: #bcabc6;
+    
     height: 100%;
     width:90%;
-    margin: 30px auto;
+    
     margin:15px auto;
     padding:30px 0;
     border-radius:20px;
-    border:1px solid #472285;
+    
+    
   }
   .posts{
-    margin:5px auto;
-    border-bottom:2px dotted white;
-    padding-bottom:15px;
+    margin:15px auto;
+    border-bottom:2px dashed #472285;
+    padding-bottom: 10px;
     width:95%;
    
 }
@@ -145,26 +149,25 @@ font-family:'source sans pro';
       display:flex;
       justify-content:space-around;
       flex-direction: column;
-      border:1px solid #472285;
-      width: 90%;
-      margin:10px auto;
-      border-radius:20px;
+      
+      width: 100%;
       align-items: center;
-      background-color:#bcabc6;
+      background-color:rgb(253, 255, 255);
   }
   .timeline-container{
-      background-color:white;
+      background-color:rgb(253, 255, 255);
       height: 100%;
       
   }
 
   
   .timeline-button{
-    background-color:#472285;
+    background-color:#FD5D67;
     border:1px solid white;
     color:whitesmoke;
     padding:10px 0;
     margin:10px 0 20px;
+    font-weight:bold
   }
   .text-input{
       
@@ -219,8 +222,13 @@ font-family:'source sans pro';
   }
 
   .description{
-      color:black;
-      text-align: center;
+      background-color: #472285;
+      text-align:center;
+      font-size:40px;
+      width:auto;
+      font-family:'source sans pro';
+      color:white;
+      height: 100px;
   }
   .update-btn{
       text-decoration: none;
@@ -242,4 +250,5 @@ font-family:'source sans pro';
       font-family:'source sans pro';
       font-style: italic;
       margin-left: 30px;
+      color:#472285
   }
